gcc/testsuite/rust/rustc/ui/parser/issue-6610.rs
trait Foo { fn a() } // { dg-error "" "" { target *-*-* } }

fn main() {}

